--- a/blocks/index.css
+++ b/blocks/index.css
@@ -2,3 +2,5 @@
 @import url(./header.css);
 @import url(./menu.css);
 @import url(./hero.css);
+@import url(./projects.css); 
+@import url(./section-title.css); 
